<resources>
    <string name="app_name">SuggestMe</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Sign up</string>
    <string name="create_account">Create an account</string>
    <string name="newUser">New User? Sign up now.</string>
    <string name="firstName">First name</string>
    <string name="surname">Surname</string>
    <string name="dob">dd-MM-yyyy</string>
    <string name="mobileNumber">Mobile number</string>
    <string name="all_fields_mandatory">All fields are mandatory!</string>
    <string name="something_went_wrong">Something went wrong! Please try again…</string>
    <string name="register_success">Registered successfully</string>
    <string name="authentication_failed">Authentication Failed! Please create an account…</string>
    <string name="add_shirt_pants">Add Shirts &amp; Pants</string>
    <string name="add_photo_note">You can take a picture or select image from gallery. Click "Add Pair" Button to save pair</string>
    <string name="select_shirt">Select Shirt</string>
    <string name="select_pant">Select Pant</string>
    <string name="save_pair">Save Pair</string>
    <string name="dislike">Dislike</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="shirt">Shirt</string>
    <string name="pant">Pant</string>
    <string name="add_pair">Add Pair</string>
    <string name="added_success">Added Successfully</string>
    <string name="saved_success">Pair saved Successfully</string>
    <string name="add_photo">add_photo</string>
    <string name="suggest_pair">Suggested Pair</string>
    <string name="select_pair_confirmation">Please select pair of shirt and pant.</string>
    <string name="title_activity_suggest_pair">SuggestPairActivity</string>
    <string name="image_missing">Images are missing from storage!</string>
    <string name="no_pair_found">No pair found! Please add some pair of shirts &amp; pants</string>
    <string name="logout">Logout</string>
    <string name="please_wait">Please Wait!</string>
    <string name="pair_history">Saved Pairs</string>
    <string name="share">Share this pair…</string>
    <string name="no_pair_history_found">No saved pairs found</string>
</resources>