<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_select_photo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layoutBgColor"
    tools:context="com.onkarnene.suggestme.views.addphoto.AddPhotoActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/addPhotoToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_close"
            app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"
            app:title="@string/add_shirt_pants"
            app:titleTextColor="@android:color/white"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/value_10"
            android:text="@string/add_photo_note"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/size_16"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/value_5"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/value_5">

                <ImageView
                    android:id="@+id/selectShirtImage"
                    android:layout_width="@dimen/value_150"
                    android:layout_height="@dimen/value_150"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/select_shirt"
                    android:scaleType="centerCrop"
                    android:src="@drawable/place_holder"/>

                <Button
                    android:id="@+id/selectShirtBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:background="@drawable/bg_rect_button"
                    android:padding="@dimen/value_10"
                    android:text="@string/select_shirt"
                    android:textAllCaps="false"
                    android:textColor="@color/colorOrange"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/value_5"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="@dimen/value_5">

                <ImageView
                    android:id="@+id/selectPantImage"
                    android:layout_width="@dimen/value_150"
                    android:layout_height="@dimen/value_150"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/select_pant"
                    android:scaleType="centerCrop"
                    android:src="@drawable/place_holder"/>

                <Button
                    android:id="@+id/selectPantBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:background="@drawable/bg_rect_button"
                    android:padding="@dimen/value_10"
                    android:text="@string/select_pant"
                    android:textAllCaps="false"
                    android:textColor="@color/colorOrange"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/addPairBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/value_20"
            android:layout_marginLeft="@dimen/value_20"
            android:layout_marginRight="@dimen/value_20"
            android:layout_marginStart="@dimen/value_20"
            android:layout_marginTop="@dimen/value_20"
            android:background="@drawable/bg_rect_button_fill"
            android:padding="@dimen/value_5"
            android:text="@string/add_pair"
            android:textAllCaps="false"
            android:textColor="@color/layoutBgColor"/>

        <Button
            android:id="@+id/doneBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/value_20"
            android:layout_marginLeft="@dimen/value_20"
            android:layout_marginRight="@dimen/value_20"
            android:layout_marginStart="@dimen/value_20"
            android:layout_marginTop="@dimen/value_20"
            android:background="@drawable/bg_rect_button"
            android:padding="@dimen/value_5"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/colorOrange"/>
    </LinearLayout>
</RelativeLayout>